--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: Paper Timer
 description: A Timer for Readers
-show_downloads: true
+show_downloads: false
 icon: assets/icon.png
