--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-minimal
 title: Paper Timer
 description: A Timer for Readers
 show_downloads: false
-icon: ./assets/icon.png
+icon: /assets/icon.png
 author: Bo An
