--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Paper Timer
-description: A Timer for Readers
+description: A Timer for Readers and Writers
 show_downloads: false
 logo: /assets/icon.png
 author: Bo An
