--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ description: A Timer for Readers
 show_downloads: false
 logo: /assets/icon.png
 author: Bo An
-google_analytics: G-WZC2HT531M
+analytics: G-WZC2HT531M
